--- a/PortalSocios/PortalSocios/Views/Erros/NotFound.cshtml
+++ b/PortalSocios/PortalSocios/Views/Erros/NotFound.cshtml
@@ -12,6 +12,8 @@
     <div class="jumbotron painel">
         <h1>ERRO 404!</h1>
         <p>A página não foi encontrada...</p>
+        <!-- ref: https://rutgersonline.desk.com/customer/en/portal/articles/2635151-canvas-course-roles-and-permissions -->
+        <img id="foto" class="img-center" src="~/Content/Imagens/erro.png" />
     </div>
 </body>
 </html>
