--- a/PortalSocios/PortalSocios/Views/Socios/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/Socios/Delete.cshtml
@@ -12,7 +12,7 @@
     <div class="titulo"><h5>@Html.ActionLink("- Voltar à lista -", "Index")</h5></div>
     <hr />
 
-    <div class="container painel">
+    <div class="container painel2">
         @Html.ValidationSummary(true, "")
 
         <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.NumSocio)</div>
