--- a/PortalSocios/PortalSocios/Views/Socios/Edit.cshtml
+++ b/PortalSocios/PortalSocios/Views/Socios/Edit.cshtml
@@ -114,8 +114,8 @@
             @Html.HiddenFor(model => model.UserName)
                 
         </div>
-        <div class="col-md-12" style="text-align:center; margin-top:20px;">
-            <input type="submit" value="Guardar" class="btn btn-primary" style="font-size: 16px;" />
+        <div class="col-md-12" style="text-align:center; margin-top: 20px;">
+            <input type="submit" value="Guardar" class="btn btn-primary" style="font-size: 16px; margin-right: 10px;" />
         </div>
     }
     <script type="text/javascript">
@@ -131,18 +131,3 @@
     </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
