--- a/PortalSocios/PortalSocios/Views/Beneficios/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/Beneficios/Delete.cshtml
@@ -1,41 +1,33 @@
 ﻿@model PortalSocios.Models.Beneficios
 
-@{
-    ViewBag.Title = "Delete";
-}
-
-<h3>Eliminar Benefícios</h3>
-
-<div>
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="utf-8" />
+    <title>Eliminar Benefício | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
+</head>
+<body>
+    <div class="titulo"><h3>ELIMINAR BENEFÍCIO</h3></div>
+    <div class="titulo"><h4>Tem a certeza de que pretende eliminar este benefício?</h4></div>
+    <div class="titulo"><h5>@Html.ActionLink("- Voltar à lista -", "Index")</h5></div>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Descricao)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Descricao)
-        </dd>
+    <div class="container painel2">
+        @Html.ValidationSummary(true, "")
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EntidRespons)
-        </dt>
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.Descricao)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.Descricao)</div>
 
-        <dd>
-            @Html.DisplayFor(model => model.EntidRespons)
-        </dd>
-
-    </dl>
-
-    <h4>Tem a certeza de que pretende eliminar este benefício?</h4>
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.EntidRespons)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.EntidRespons)</div>
+    </div>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            @Html.ActionLink("Voltar à lista", "Index") |
-            <input type="submit" value="Sim" class="btn btn-primary" />
+        <div class="col-lg-12 form-actions no-color" style="text-align:center; margin-top:20px;">
+            <input type="submit" value="Sim" class="btn btn-primary" style="font-size: 16px;" />
         </div>
     }
-</div>
+</body>
+</html>
