--- a/PortalSocios/PortalSocios/Views/Categorias/Edit.cshtml
+++ b/PortalSocios/PortalSocios/Views/Categorias/Edit.cshtml
@@ -1,65 +1,61 @@
 ﻿@model PortalSocios.Models.Categorias
 
-@{
-    ViewBag.Title = "Edit";
-}
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="utf-8" />
+    <title>Editar Categoria | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+</head>
+<body>
+    <div class="titulo"><h3>EDITAR CATEGORIA</h3></div>
+    <div class="titulo"><h5>@Html.ActionLink("- Voltar à lista -", "Index")</h5></div>
+    <hr />
 
-<h3>Editar Categoria</h3>
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
 
+        <div class="form-horizontal painel2">
+            @Html.ValidationSummary(true, "")
+            @Html.HiddenFor(model => model.CategoriaID)
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.CategoriaID)
+            <div class="form-group">
+                @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control", @maxlength = "30" } })
+                    @Html.ValidationMessageFor(model => model.Nome, "")
+                </div>
+            </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control", @maxlength = "30" } })
-                @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.FaixaEtaria, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.FaixaEtaria, new { htmlAttributes = new { @class = "form-control", @maxlength = "20" } })
+                    @Html.ValidationMessageFor(model => model.FaixaEtaria, "")
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.NumQuotasAnuais, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.NumQuotasAnuais, new { htmlAttributes = new { @class = "form-control", @min = "1", @max = "12" } })
+                    @Html.ValidationMessageFor(model => model.NumQuotasAnuais, "")
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.AuxValorMensal, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.AuxValorMensal, new { htmlAttributes = new { @class = "form-control", @maxlength = "10", @Value = Model.ValorMensal.ToString() } })
+                    @Html.ValidationMessageFor(model => model.AuxValorMensal, "")
+                </div>
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.FaixaEtaria, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.FaixaEtaria, new { htmlAttributes = new { @class = "form-control", @maxlength = "20" } })
-                @Html.ValidationMessageFor(model => model.FaixaEtaria, "", new { @class = "text-danger" })
-            </div>
+        <div class="col-md-12" style="text-align:center; margin-top: 20px;">
+            <input type="submit" value="Guardar" class="btn btn-primary" style="font-size: 16px; margin-right: 10px;" />
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.NumQuotasAnuais, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.NumQuotasAnuais, new { htmlAttributes = new { @class = "form-control", @min = "1", @max = "12" } })
-                @Html.ValidationMessageFor(model => model.NumQuotasAnuais, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.AuxValorMensal, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.AuxValorMensal, new { htmlAttributes = new { @class = "form-control", @maxlength = "10", @Value = Model.ValorMensal.ToString() } })
-                @Html.ValidationMessageFor(model => model.AuxValorMensal, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Guardar" class="btn btn-primary" />
-            </div>
-        </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Voltar à lista", "Index")
-</div>
-
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    }
+</body>
+</html>
