--- a/PortalSocios/PortalSocios/Views/Erros/Indisponivel.cshtml
+++ b/PortalSocios/PortalSocios/Views/Erros/Indisponivel.cshtml
@@ -12,6 +12,8 @@
     <div class="jumbotron painel">
         <h1>SERVIÇO INDISPONÍVEL!</h1>
         <p>O serviço encontra-se em construção e estará disponível brevemente.</p>
+        <!-- ref: http://www.mapcentia.com/en/product/platform.htm -->
+        <img id="foto" class="img-center" src="~/Content/Imagens/construcao.png" />
     </div>
 </body>
 </html>
