--- a/PortalSocios/PortalSocios/Views/Erros/Restrito.cshtml
+++ b/PortalSocios/PortalSocios/Views/Erros/Restrito.cshtml
@@ -11,7 +11,9 @@
 <body>
     <div class="jumbotron painel">
         <h1>Acesso Restrito!</h1>
-        <p>Só os funcionários do clube podem visualizar este conteúdo...</p>
-    </div>
+        <p>Não possui privilégios para visualizar o conteúdo...</p>
+        <!-- ref: https://commons.wikimedia.org/wiki/File:Forbidden_Symbol_Transparent.svg -->
+        <img id="foto" class="img-center" src="~/Content/Imagens/proibido.png" />
+    </div>    
 </body>
 </html>
