--- a/PortalSocios/PortalSocios/Views/Home/Sobre.cshtml
+++ b/PortalSocios/PortalSocios/Views/Home/Sobre.cshtml
@@ -29,13 +29,17 @@
             <div class="col-lg-12">
                 <img id="foto" class="img-circle img-responsive img-center" src="~/Content/Imagens/fotorc.jpg" />
                 <h3>Utilizadores</h3>
-                <p><span class="tipo">Role:</span> Funcionario</p>
+                <p><span class="tipo">Role:</span> Administrador</p>
                 <p><span class="tipo">E-mail:</span> dalves@coxos.pt</p>
                 <p><span class="tipo">Palavra-chave:</span> 123Qwe#</p>
                 <br />
+                <p><span class="tipo">Role:</span> Funcionario</p>
+                <p><span class="tipo">E-mail:</span> aazevedo@coxos.pt</p>
+                <p><span class="tipo">Palavra-chave:</span> 456Qwe#</p>
+                <br />
                 <p><span class="tipo">Role:</span> Socio</p>
                 <p><span class="tipo">E-mail:</span> smodesto@gmail.com</p>
-                <p><span class="tipo">Palavra-chave:</span> 456Qwe#</p>
+                <p><span class="tipo">Palavra-chave:</span> 789Qwe#</p>
             </div>
         </div>
     </div>
