--- a/PortalSocios/PortalSocios/Views/RolesAdmin/Create.cshtml
+++ b/PortalSocios/PortalSocios/Views/RolesAdmin/Create.cshtml
@@ -1,40 +1,36 @@
 ﻿@model PortalSocios.Models.RoleViewModel
 
-@{
-    ViewBag.Title = "Create";
-}
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="utf-8" />
+    <title>Criar Nova Função | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
+</head>
+<body>
+    <div class="titulo"><h3>CRIAR NOVA FUNÇÃO</h3></div>
+    <div class="titulo"><h5>@Html.ActionLink("- Voltar à lista -", "Index")</h5></div>
+    <hr />
 
-<h3>Criar Novo Role</h3>
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
 
+        <div class="form-horizontal painel2">
+            @Html.ValidationSummary(true, "")
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true)
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Name)
+            <div class="form-group">
+                @Html.Label("Função", new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Name)
+                </div>
             </div>
         </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Criar" class="btn btn-primary" />
-            </div>
+        <div class="col-md-12" style="text-align:center; margin-top:20px;">
+            <input type="submit" value="Criar" class="btn btn-primary" style="font-size: 16px;" />
         </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Voltar à lista", "Index")
-</div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    }
+</body>
+</html>
