--- a/PortalSocios/PortalSocios/Views/RolesAdmin/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/RolesAdmin/Delete.cshtml
@@ -1,33 +1,31 @@
 ﻿@model Microsoft.AspNet.Identity.EntityFramework.IdentityRole
 
-@{
-    ViewBag.Title = "Delete";
-}
-
-<h2>Eliminar Role</h2>
-
-<div>
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="utf-8" />
+    <title>Eliminar Função | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
+</head>
+<body>
+    <div class="titulo"><h3>ELIMINAR FUNÇÃO</h3></div>
+    <div class="titulo"><h4>Tem a certeza de que pretende eliminar esta função?</h4></div>
+    <div class="titulo"><p>Todos os utilizadores ficarão desassociados a esta função. Contudo, não serão eliminados.</p></div>
+    <div class="titulo"><h5>@Html.ActionLink("- Voltar à lista -", "Index")</h5></div>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-    </dl>
+    <div class="container painel2">
+        @Html.ValidationSummary(true, "")
 
-    <h4>Tem a certeza de que pretende eliminar este Role?</h4>
-    <p>Todos os utilizadores ficarão desassociados ao Role. Contudo, não serão eliminados.</p>
+        <div class="col-lg-6 dadosEsq">Função</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.Name)</div>
+    </div>
 
-    @using (Html.BeginForm())
-    {
+    @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">            
-            @Html.ActionLink("Voltar à lista", "Index") |
-            <input type="submit" value="Sim" class="btn btn-primary" />
+        <div class="col-lg-12 form-actions no-color" style="text-align:center; margin-top:20px;">
+            <input type="submit" value="Sim" class="btn btn-primary" style="font-size: 16px;" />
         </div>
     }
-</div>
+</body>
+</html>
