--- a/PortalSocios/PortalSocios/Views/Shared/Error.cshtml
+++ b/PortalSocios/PortalSocios/Views/Shared/Error.cshtml
@@ -14,6 +14,7 @@
     <div class="jumbotron painel">
         <h1>ERRO!</h1>
         <p>Ocorreu um erro a processar a página...</p>
+        <img id="foto" class="img-center" src="~/Content/Imagens/erro.png" />
     </div>
 </body>
 </html>
