--- a/PortalSocios/PortalSocios/Views/Shared/_Layout.cshtml
+++ b/PortalSocios/PortalSocios/Views/Shared/_Layout.cshtml
@@ -23,18 +23,22 @@
                         <li>@Html.ActionLink("Pagamentos", "Index", "Pagamentos", null, new { @class = "ligacoes" })</li>
                     }
 
-                    @if (User.IsInRole("Funcionario")) {
+                    @if (User.IsInRole("Administrador") || User.IsInRole("Funcionario")) {
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle ligacoes" data-toggle="dropdown">Gestão da BD<b class="caret"></b></a>
-                            <ul class="dropdown-menu dp">
+                            <ul class="dropdown-menu">
                                 <li><a href="~/Socios/Index">Sócios</a></li>
                                 <li><a href="~/Quotas/Index">Quotas</a></li>
                                 <li><a href="~/Pagamentos/Index">Pagamentos</a></li>
-                                <li><a href="~/Funcionarios/Index">Funcionários</a></li>
+                                @if (User.IsInRole("Administrador")) {
+                                    <li><a href="~/Funcionarios/Index">Funcionários</a></li>
+                                }                                
                                 <li><a href="~/Categorias/Index">Categorias</a></li>
                                 <li><a href="~/Beneficios/Index">Benefícios</a></li>
-                                <li><a href="~/UsersAdmin/Index">Utilizadores</a></li>
-                                <li><a href="~/RolesAdmin/Index">Roles</a></li>
+                                @if (User.IsInRole("Administrador")) {
+                                    <li><a href="~/UsersAdmin/Index">Utilizadores</a></li>
+                                    <li><a href="~/RolesAdmin/Index">Funções</a></li>
+                                }
                             </ul>
                         </li>
                     }
