--- a/PortalSocios/PortalSocios/Views/Socios/Details.cshtml
+++ b/PortalSocios/PortalSocios/Views/Socios/Details.cshtml
@@ -11,7 +11,7 @@
     <div class="titulo"><h5>@Html.ActionLink("- Voltar à lista -", "Index")</h5></div>
     <hr />
 
-    <div class="container painel">
+    <div class="container painel2">
         <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.NumSocio)</div>
         <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.NumSocio)</div>
 
