--- a/PortalSocios/PortalSocios/Views/Socios/Index.cshtml
+++ b/PortalSocios/PortalSocios/Views/Socios/Index.cshtml
@@ -8,13 +8,17 @@
 </head>
 <body>
     <!-- título -->
-    @if (User.IsInRole("Funcionario")) {
+    @if (User.IsInRole("Administrador") || User.IsInRole("Funcionario")) {
         <div class="titulo"><h3>LISTA DE SÓCIOS</h3></div>
-        <div class="titulo"><h5>@Html.ActionLink("- Criar novo sócio -", "Create")</h5></div>
     }
     @if (User.IsInRole("Socio")) {
-        <div class="titulo"><h3>Dados Pessoais</h3></div>
+        <div class="titulo"><h3>DADOS PESSOAIS</h3></div>
     }
+    
+    <!-- criar novo sócio -->
+    <div class="col-md-12" style="text-align:center; margin-top: 20px;">
+        <input type="button" class="btn btn-primary" value="Criar Novo Sócio" onclick="location.href='@Url.Action("Create", "Socios")'" style="font-size: 16px;" />
+    </div>
     <hr />
 
     <!-- interface de pesquisa -->
@@ -26,7 +30,7 @@
     }
 
     <!-- nota -->
-    <div style="text-align:center;">** Só estão apresentados os atributos mais relevantes. Os restantes podem ser consultados individualmente nos detalhes de cada sócio. **</div>
+    <div style="text-align:center;">** Só estão apresentados os dados mais relevantes. Os restantes podem ser consultados nos detalhes de cada sócio. **</div>
 
     <div style="text-align:center;">
         <div style="display: inline-block;">
@@ -53,7 +57,7 @@
                         <td class="colCentro">@Html.DisplayFor(modelItem => item.Telemovel)</td>
                         <td class="colCentro">@Html.DisplayFor(modelItem => item.DataInscr)</td>
                         <td class="colCentro">@Html.DisplayFor(modelItem => item.Categoria.Nome)</td>
-                        @if (User.IsInRole("Funcionario")) {
+                        @if (User.IsInRole("Administrador") || User.IsInRole("Funcionario")) {
                             <!-- opções de gestão -->
                             <td class="colCentro">
                                 @Html.ActionLink("Editar", "Edit", new { id = item.SocioID }) |
@@ -71,8 +75,7 @@
                 }
             </table>
         </div>
-    </div>
-    
+    </div>   
 </body>
 </html>
 
