--- a/PortalSocios/PortalSocios/Views/UsersAdmin/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/UsersAdmin/Delete.cshtml
@@ -1,31 +1,30 @@
 ﻿@model PortalSocios.Models.ApplicationUser
 
-@{
-    ViewBag.Title = "Delete";
-}
-
-<h2>Delete.</h2>
-
-<h3>Are you sure you want to delete this User?</h3>
-<div>
-    <h4>User.</h4>
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="utf-8" />
+    <title>Eliminar Utilizador | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
+</head>
+<body>
+    <div class="titulo"><h3>ELIMINAR UTILIZADOR</h3></div>
+    <div class="titulo"><h4>Tem a certeza de que pretende eliminar este utilizador?</h4></div>
+    <div class="titulo"><h5>@Html.ActionLink("- Voltar à lista -", "Index")</h5></div>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.UserName)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.UserName)
-        </dd>
-    </dl>
+    <div class="container painel2">
+        @Html.ValidationSummary(true, "")
+
+        <div class="col-lg-6 dadosEsq">Username</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.UserName)</div>
+    </div>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+        <div class="col-lg-12 form-actions no-color" style="text-align:center; margin-top:20px;">
+            <input type="submit" value="Sim" class="btn btn-primary" style="font-size: 16px;" />
         </div>
     }
-</div>
+</body>
+</html>
