--- a/PortalSocios/PortalSocios/Views/UsersAdmin/Details.cshtml
+++ b/PortalSocios/PortalSocios/Views/UsersAdmin/Details.cshtml
@@ -1,45 +1,29 @@
 ﻿@model PortalSocios.Models.ApplicationUser
 
-@{
-    ViewBag.Title = "Details";
-}
-
-<h2>Details.</h2>
-
-<div>
-    <h4>User</h4>
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="utf-8" />
+    <title>Detalhes do Utilizador | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
+</head>
+<body>
+    <div class="titulo"><h3>DETALHES DO UTILIZADOR</h3></div>
+    <div class="titulo"><h5>@Html.ActionLink("- Voltar à lista -", "Index")</h5></div>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.UserName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.UserName)
-        </dd>
-    </dl>
-</div>
-<h4>List of roles for this user</h4>
-@if (ViewBag.RoleNames.Count == 0)
-{
-    <hr />
-    <p>No roles found for this user.</p>
-}
 
-<table class="table">
+    <div class="container painel2">
+        <div class="col-lg-6 dadosEsq">Username</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.UserName)</div>
 
-    @foreach (var item in ViewBag.RoleNames)
-    {
-        <tr>
-            <td>
-                @item
-            </td>
-        </tr>
-    }
-</table>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
-
-
-
+        <div class="col-lg-6 dadosEsq">Funções</div>
+        <div class="col-lg-6 dadosDir">
+            @if (ViewBag.RoleNames.Count == 0) {
+                <span>Este utilizador não possui funções.</span>
+            }
+            @foreach (var item in ViewBag.RoleNames) {                
+                <span>@item;</span> 
+            }
+        </div>
+    </div>
+</body>
+</html>
